.provarCaches/00D410000011HE0EAM/objects/rstk__poaphdr__c.object
<CustomObject>
    <description>poaphdr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poaphdr_div__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(ROUND(rstk__poaphdr_apbatchno__c,0))</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poaphdr_div__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(ROUND(rstk__poaphdr_apbatchno__c,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_adddate__c</fullName>
        <inlineHelpText>The date the PO-AP Match record is added.  System-assigned.</inlineHelpText>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_apbatchno__c</fullName>
        <inlineHelpText>This is incremented by  1 each time a new PO-AP Match is added and &apos;Retain the Current Batch Number&apos; is not checked.  Defaults from PO-AP Control record setting.</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_apmatchind__c</fullName>
        <inlineHelpText>‘A’ (Automatic) if the ‘automated AP PO match’ is performed.  ‘M’ (Manual) if the user just validates that they entered the Vendor’s voucher for the receipt in the ‘Manual AP PO Match’ program.</inlineHelpText>
        <label>AP Match Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic Match</fullName>
                </value>
                <value>
                    <fullName>Close Batch</fullName>
                </value>
                <value>
                    <fullName>Reopen Closed Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_appayamtinitind__c</fullName>
        <inlineHelpText>This field is initialized to either a &apos;P&apos; or &apos;V&apos;. When set to &apos;P&apos;, the amount is set from the Purchase Order/Purchase Order Receipt and if set to &apos;V&apos;, the amount is set from the Vendor’s Invoice.</inlineHelpText>
        <label>Invoice Amount Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Vendor Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_approcessopt__c</fullName>
        <inlineHelpText>This will decide the order in which the PO Receipt records will be displayed on the Automatic and Manual AP PO Match screens.</inlineHelpText>
        <label>AP Process Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_apvendamtinitind__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the user must input the Vendor&apos;s Invoice information.  If unchecked , the user need not input the Vendor&apos;s Invoice information.  Defaults from PO-AP Control record setting.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_batchnoidx__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Internal batch number indexed field used for querying in code.</inlineHelpText>
        <label>Batch Number (Indexed)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_batchsts__c</fullName>
        <inlineHelpText>This field is set to &apos;O&apos; (Open) or &apos;C&apos; (Closed).   If the Batch is Open,  then corrections can be applied.   If the Batch is Closed,  then corrections cannot be applied.</inlineHelpText>
        <label>AP Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Division that controlled the purchase order this invoice is from.</inlineHelpText>
        <label>Buying Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>POAP Headers</relationshipLabel>
        <relationshipName>POAP_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_endpintxno__c</fullName>
        <inlineHelpText>This is set to the last Invoice PIN Number updated within the Batch Session.</inlineHelpText>
        <label>Invoice Batch Ending PIN Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_numbtxns__c</fullName>
        <inlineHelpText>This is initialized to zero on the add of the PO-AP Match record and is automatically updated as the PO RECEIPT AP records are updated.</inlineHelpText>
        <label>Number of Receipt Transactions in Batch</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_rcptselectdate__c</fullName>
        <inlineHelpText>This field is  initially set to [today&apos;s date minus the Receipt Select Days],  but it can be overridden.  Receipt Select Days are set on the PO-AP Control Record.</inlineHelpText>
        <label>Select All Receipts Prior to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_rcptselectdatefrom__c</fullName>
        <inlineHelpText>PO-AP Batch Select Receipts From-Date.  Defaults to today&apos;s date minus number of days set up on PO-AP Control Record &apos;Receipt Select Days&apos;.  May be overridden.</inlineHelpText>
        <label>Select Receipts From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_startpintxno__c</fullName>
        <inlineHelpText>This is set to the first Invoice PIN Number updated within the Batch Session.</inlineHelpText>
        <label>Invoice Batch Starting PIN Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is set to the user that is processing the AP-PO-AUTO-MATCH program or that is set in the AP-PO-MANUAL MATCH program.</inlineHelpText>
        <label>AP Entry User Number</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>POAP Headers</relationshipLabel>
        <relationshipName>POAP_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poaphdr_vendno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Entering a Vendor Number here will filter out all vendor receipts except for the specified vendor when the &apos;Select All PO Receipts&apos; button is clicked.  Not required.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>POAP Headers</relationshipLabel>
        <relationshipName>poaphdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>POAP Header</label>
    <listViews>
        <fullName>rstk__Kevin</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <label>Kevin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PDE3_POAPHDR</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_vendno__c</columns>
        <columns>rstk__poaphdr_apvendamtinitind__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>PDE3 POAPHDR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_AP_Header_All</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <label>PO AP Header - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_AP_Header_Open</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poaphdr_batchsts__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>PO AP Header Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_AP_Header_Open_USC</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poaphdr_div__c</field>
            <operation>contains</operation>
            <value>usc</value>
        </filters>
        <label>PO AP Header Open - USC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_AP_Header_Open_USE</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poaphdr_batchsts__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>rstk__poaphdr_div__c</field>
            <operation>contains</operation>
            <value>use</value>
        </filters>
        <label>PO AP Header Open - USE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_AP_Header_Open_USW</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_approcessopt__c</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>rstk__poaphdr_usrno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poaphdr_div__c</field>
            <operation>contains</operation>
            <value>usw</value>
        </filters>
        <label>PO AP Header Open - USW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_POAPHDR</fullName>
        <columns>NAME</columns>
        <columns>rstk__poaphdr_apbatchno__c</columns>
        <columns>rstk__poaphdr_adddate__c</columns>
        <columns>rstk__poaphdr_batchsts__c</columns>
        <columns>rstk__poaphdr_apmatchind__c</columns>
        <columns>rstk__poaphdr_div__c</columns>
        <columns>rstk__poaphdr_startpintxno__c</columns>
        <columns>rstk__poaphdr_endpintxno__c</columns>
        <columns>rstk__poaphdr_numbtxns__c</columns>
        <columns>rstk__poaphdr_rcptselectdatefrom__c</columns>
        <columns>rstk__poaphdr_rcptselectdate__c</columns>
        <columns>rstk__poaphdr_vendno__c</columns>
        <columns>rstk__poaphdr_apvendamtinitind__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>RS POAPHDR</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POAP Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POAP Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>